k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: staging
    name: bioneural-olfactory-fusion-staging
  name: bioneural-olfactory-fusion-staging
