k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bioneural-olfactory-fusion-api
  name: bioneural-olfactory-fusion-service
  namespace: bioneural-olfactory-fusion-staging
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: bioneural-olfactory-fusion-api
  type: ClusterIP
